[package]
name = "spliter"
version = "0.1.0"
authors = ["Tavian Barnes <tavianator@tavianator.com>"]
edition = "2021"
description = "A simple way to implement Rayon's ParallelIterator"
repository = "https://github.com/tavianator/spliter"
license = "MIT"
keywords = ["spliterator"]
categories = ["concurrency"]

[dependencies]
rayon = "1.5.1"
